<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">BeHappy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="amarelo">Amarelo</string>
    <string name="verde">Verde</string>
    <string name="azul">Azul</string>
    <string name="vermelho">Vermelho</string>
    <string name="sfonte">Selecione a fonte</string>
    <string name="fonte">Fontes</string>
    <string name="game">Games</string>
    <string name="desafio">Desafios</string>
    <string name="educacional">Educacional</string>
    <string name="noticia">Notícias</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="home">Home</string>
    <string name="report_email">Email para envio:</string>
    <string name="report_name">Nome:</string>
    <string name="report">Diagnóstico:</string>
    <string name="send">Enviar</string>
    <string name="title_activity_mail_report">Enviando email</string>
    <string name="q1">1.    Seu filho gosta de se balançar, de pular no seu joelho, etc?</string>
    <string name="q2">2.    Seu filho tem interesse por outras crianças?</string>
    <string name="q3">3.    Seu filho gosta de subir em coisas, como escadas ou móveis?</string>
    <string name="q4">4.    Seu filho gosta de brincar de esconder e mostra o rosto ou de esconde-esconde?</string>
    <string name="q5">5.	Seu filho já brincou de faz-de-conta, como por exemplo, fazer de conta que está falando ao telefone ou que está cuidando da boneca, ou qualquer outra brincadeira de faz-de-conta?</string>
    <string name="q6">6.	Seu filho já usou o dedo indicador dele para apontar, para pedir alguma coisa?</string>
    <string name="q7">7.	Seu filho já usou o dedo indicador dele para apontar, para indicar interesse em algo?</string>
    <string name="q8">8.	Seu filho consegue brincar de forma correta com brinquedos pequenos (Ex.: Carros ou blocos), sem apenas colocar na boca, remexer no brinquedo ou deixar o brinquedo cair?</string>
    <string name="q9">9.	O seu filho alguma vez trouxe objetos para você (pais) para lhe mostrar este objeto?</string>
    <string name="q10">10.	O seu filho olha para você no olho por mais de um segundo ou dois?</string>
    <string name="q11">11.	O seu filho já pareceu muito sensível ao barulho (Ex.: tapando os ouvidos)</string>
    <string name="q12">12.	O seu filho sorri em respostas ao seu rosto ou a o seu sorriso?</string>
    <string name="q13">13.	O seu filho o imita? (Ex.: Você faz expressões ou caretas e seu filho o imita?)</string>
    <string name="q14">14.	O seu filho responde quando você o chama pelo nome?</string>
    <string name="q15">15.	Se você aponta um brinquedo do outro lado do cômodo, o seu filho olha para ele?</string>
    <string name="q16">16.	Seu filho já sabe andar?</string>
    <string name="q17">17.	O seu filho olha para coisas que você está olhando?</string>
    <string name="q18">18.	O seu filho faz movimentos estranhos com os dedos perto do rosto dele?</string>
    <string name="q19">19.	O seu filho tenta atrair a sua atenção para a atividade dele?</string>
    <string name="q20">20.	Você alguma vez já se perguntou se seu filho é surdo?</string>
    <string name="q21">21.	O seu filho entende o que as pessoas dizem?</string>
    <string name="q22">22.	O seu filho às vezes fica “aéreo”, “olhando para o nada” ou caminha sem direção definida?</string>
    <string name="q23">23.	O seu filho olha para o seu rosto para conferir a sua reação quando vê algo estranho?</string>
    <string name="y">Sim</string>
    <string name="n">Não</string>
   

</resources>
