<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

    <ImageButton
        android:id="@+id/ibtnGame"
        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:src="@drawable/games" 
        android:contentDescription="@string/game"/>

    <ImageButton
        android:id="@+id/ibtnDesafio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/desafios"
        android:contentDescription="@string/desafio" />
    
    </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
    <ImageButton
        android:id="@+id/ibtnEducacional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/educacional"
        android:contentDescription="@string/educacional" />
     </LinearLayout>
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
<Button
    android:id="@+id/btnNoticia"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/noticia" />

<Button
    android:id="@+id/btnDiagnostico"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/diagnostico" />
</LinearLayout>

</LinearLayout>
