<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/ibtnAmarelo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/amarelo" 
        android:contentDescription="@string/amarelo"/>

    <ImageButton
        android:id="@+id/ibtnAzul"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/ibtnAmarelo"
        android:layout_marginRight="34dp"
        android:src="@drawable/azul" 
        android:contentDescription="@string/azul"/>

    <ImageButton
        android:id="@+id/ibtnVerde"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/ibtnAmarelo"
        android:layout_below="@+id/ibtnAmarelo"
        android:layout_marginTop="50dp"
        android:src="@drawable/verde"
        android:contentDescription="@string/verde" />

    <ImageButton
        android:id="@+id/ibtnVermelho"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/ibtnAzul"
        android:layout_alignTop="@+id/ibtnVerde"
        android:src="@drawable/vermelho"
        android:contentDescription="@string/vermelho" />

</RelativeLayout>